# AudioScribe

./: .gitignore  README.md  app.py  pyproject.toml  spec.md
audioscribe/: __init__.py  batch_transcriber.py  config.py  logger.py  models.py
audioscribe/factories/: stt_factory.py
audioscribe/interfaces/: __init__.py  stt.py
audioscribe/stt/: faster_whisper_provider.py  qwen3_asr_provider.py
audioscribe/utils/: ffmpeg.py  regions.py
backend/: app.py  pyproject.toml
backend/audioscribe/: batch_transcriber.py  config.py  contracts.py  logger.py  server.py  worker.py
backend/audioscribe/api/: http.py
backend/audioscribe/application/: commands.py  job_manager.py  queries.py  transcription_service.py  worker_job.py  worker_run.py
backend/audioscribe/domain/: models.py
backend/audioscribe/factories/: __init__.py
backend/audioscribe/infrastructure/: json_files.py  log_stream.py  process_watch.py  runtime.py  runtime_supervisor.py  workspace.py
backend/audioscribe/stt/: __init__.py  base.py  faster_whisper_provider.py  models.py  provider_registry.py  qwen3_asr_provider.py
backend/audioscribe/utils/: ffmpeg.py  regions.py
scripts/: build-backend-runtime.ps1
ui/: README.md  package-lock.json  package.json  tailwind.config.js  tsc_output.txt  typescript_errors.txt
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  cargo_error.txt  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs
ui/src/components/: Dropzone.tsx  FileEditor.tsx  FileList.tsx  GlobalSettingsModal.tsx  LogViewer.tsx
ui/src/services/: api.ts  (+1 more)
(+50 files in other folders)
